[WebRTC] Don't use inline style and/or javascripts
The new http server (libwebsockets) configures a strict Content
Security Policy which forbids its usage. The CSP could be relaxed, but
it's always best to not have inline css and javascript.

Bug: 163011080
Test: run locally
Change-Id: I59cb4c0aa85fe817d83bf558a680242f71a52fb7

--- a/host/frontend/gcastv2/signaling_server/assets/index.html
+++ b/host/frontend/gcastv2/signaling_server/assets/index.html
@@ -32,7 +32,7 @@
         <hr>
         <section class="noscroll">
             <div class="one">
-                <video id="deviceScreen" autoplay style="touch-action:none" ></video>
+                <video id="deviceScreen" autoplay ></video>
             </div>
 
             <div class="two" >
