Adds the Device Details pane to the WebRTC client.
Only supports static info provided in the device_info dictionary
at device connection time for now.

Bug: 163080005
Test: launch_cvd, observe device details pane below control panel
Test: launch_cvd using different hardware specs (cpu,screen,memory)
Change-Id: If00c172ebf66635b51da5b0417a07caa1a29c754
(cherry picked from commit f3c5dea63fb652ab347054e31488f6ceed29fa03)

--- a/host/frontend/webrtc_operator/assets/index.html
+++ b/host/frontend/webrtc_operator/assets/index.html
@@ -38,6 +38,11 @@
           <div id='control_panel'>
             <h2>Device Controls</h2>
           </div>
+          <div id='device_details'>
+            <h2>Device Details</h2>
+            <h3>Hardware Configuration</h3>
+            <span id='device_details_hardware'>unknown</span>
+          </div>
           <textarea id="logcat" rows="55" cols="120" readonly ></textarea>
         </div>
       </section>
