Implements a screen rotation button in the control panel.
- The 'rotate' button uses the WebRTC adb socket to send an adb shell
  command to run a new cuttlefish_rotate binary.
- The WebRTC adb socket now connects automatically on
  VIRTUAL_DEVICE_BOOT_STARTED rather than waiting for user interaction.
- The cuttlefish_rotate binary lives on the /vendor partition. This
  binary triggers device rotation by injecting accelerometer data to the
  ISensors HAL.
- Removes the logcat view.

Bug: 163079832
Bug: 163079837
Test: Use the new rotate button, observe screen rotation.
Change-Id: Iaca43370dc3de22596b9b563fd99eb6b885c2e26
(cherry picked from commit b3a6295d8f1fdc597a2836ebbd4999a55b976f90)

--- a/host/frontend/webrtc_operator/assets/index.html
+++ b/host/frontend/webrtc_operator/assets/index.html
@@ -33,7 +33,6 @@
         </div>
         <div id='control_view'>
           <button id="keyboardCaptureBtn">Capture Keyboard</button>
-          <button id="showLogcatBtn">Show Logcat</button>
           <hr>
           <div id='control_panel'>
             <h2>Device Controls</h2>
@@ -43,11 +42,10 @@
             <h3>Hardware Configuration</h3>
             <span id='device_details_hardware'>unknown</span>
           </div>
-          <textarea id="logcat" rows="55" cols="120" readonly ></textarea>
         </div>
       </section>
 
-       <script src="js/logcat.js"></script>
+       <script src="js/adb.js"></script>
        <script src="js/cf_webrtc.js" type="module"></script>
        <script src="js/app.js"></script>
     </body>
