Adds support for custom actions.
Custom actions can currently be one of two types:
- shell_command: An adb shell command, represented by a single button.
- server: A custom host binary called an "action server" that connects
          with WebRTC via a unix socket, and listens for command events.
          Action servers can define multiple buttons.

These are defined by two new build variables:
- cvd_custom_action_config: A JSON file prebuilt_etc_host module that
                            defines the set of custom actions.
- cvd_custom_action_servers: A list of host binaries that define the
                             action servers present in the JSON config.

Bug: b/163081337
Test: Include the example custom action config as described in
      host/example_custom_actions/README.md. Boot device and interact
      with the new buttons.
Test: Boot without setting cvd_custom_action_config, observe only
      default buttons.
Change-Id: Iad2f0e8ab9247bc4b4bb9597f6003b1cc057e007
(cherry picked from commit cf20a4d4315e737b0865a602183c9519f7f01033)

--- a/host/frontend/webrtc_operator/assets/index.html
+++ b/host/frontend/webrtc_operator/assets/index.html
@@ -36,6 +36,9 @@
           <hr>
           <div id='control_panel'>
             <h2>Device Controls</h2>
+            <div id='control_panel_default_buttons'></div>
+            <h2 id='custom_controls_title'>Custom Controls</h2>
+            <div id='control_panel_custom_buttons'></div>
           </div>
           <div id='device_details'>
             <h2>Device Details</h2>
