Shows an error on WebRTC connection failure.
Also adds fine-grained disabling/enabling of buttons:
- All buttons start disabled.
- When the device screen becomes visible, buttons that are not
  known to require adb access are enabled.
- When adb is connected, adb-required buttons are enabled.
- When WebRTC is disconnected, all buttons are disabled.

A future change will add fine-grained adb status messages.

Bug: 170893263
Test: launch_cvd and observe button states
Test: stop_cvd and observe error message and button states
Test: modify cf_webrtc.js to always reject the connection,
      observe immediate error message
Change-Id: Ic2240a59f4a2e18d54c508f3085b279aaa452bca
(cherry picked from commit a25ab5bea41bf32a8e55bb3ec98a1a948ca3e54e)

--- a/host/frontend/webrtc_operator/assets/index.html
+++ b/host/frontend/webrtc_operator/assets/index.html
@@ -29,7 +29,13 @@
       </section>
       <section id='device_connection'>
         <div id='device_view'>
+          <h3 id='device_status_message'></h3>
           <video id="deviceScreen" autoplay ></video>
+          <h3 id='webrtc_status_message'>
+            No connection to the guest device.<br><br>
+            Please ensure the WebRTC process on the host machine is active.<br><br>
+            Tip: <code>ps aux | grep -i webrtc</code>
+          </h3>
         </div>
         <div id='control_view'>
           <button id="keyboardCaptureBtn">Capture Keyboard</button>
