Display adb connection status under the control panel.
Bug: 170893263
Test: launch_cvd, await and observe green connected message.
Test: launch_cvd -norestart_subprocesses, kill socket_vsock_proxy,
      attempt to use a control panel button that requires adb,
      observe red failed message.
Change-Id: I2c437bb179b3bb6c5d55ce15b88b0d17b0cdfb29
(cherry picked from commit b2cf713e951e7736ef2a91ae3ce36c995f4739e9)

--- a/host/frontend/webrtc_operator/assets/index.html
+++ b/host/frontend/webrtc_operator/assets/index.html
@@ -46,6 +46,7 @@
             <h2 id='custom_controls_title'>Custom Controls</h2>
             <div id='control_panel_custom_buttons'></div>
           </div>
+          <h3 id='adb_status_message' class='connecting'>Establishing adb connection. Please wait...</h3>
           <div id='device_details'>
             <h2>Device Details</h2>
             <h3>Hardware Configuration</h3>
